import { js } from 'cc';
import proto from './proto/proto.js';
import { EDITOR } from 'cc/env';

export const Route = {
    /** 查询服务器时间(网关服务当前时间戳)*/
    ["gate.protocol.servertime"]: "gate.protocol.servertime",
    /** 查询用户信息*/
    ["user.protocol.getuserinfo"]: "user.protocol.getuserinfo",
    /** 搜索用户信息*/
    ["user.protocol.searchuser"]: "user.protocol.searchuser",
    /** 修改昵称*/
    ["user.protocol.modifynickname"]: "user.protocol.modifynickname",
    /** 绑定好友*/
    ["user.protocol.bindfriend"]: "user.protocol.bindfriend",
    /** 查询好友列表（测试用，详细信息）*/
    ["user.protocol.getfriends"]: "user.protocol.getfriends",
    /** 查询好友列表（正式用，缓存性能高）*/
    ["user.protocol.getfriendsinfos"]: "user.protocol.getfriendsinfos",
    /** 设置密码（游戏二级密码）*/
    ["user.protocol.passwordset"]: "user.protocol.passwordset",
    /** 验证密码（游戏二级密码）*/
    ["user.protocol.passwordvalidate"]: "user.protocol.passwordvalidate",
    /** 查询玩家数据（这个后面要删除）*/
    ["player.protocol.getplayerdata"]: "player.protocol.getplayerdata",
    /** 查询玩家道具数据*/
    ["player.protocol.getplayeritems"]: "player.protocol.getplayeritems",
    /** 查询玩家任务数据*/
    ["player.protocol.getplayertasks"]: "player.protocol.getplayertasks",
    /** 查询玩家卡牌数据*/
    ["player.protocol.getplayerbattlecards"]: "player.protocol.getplayerbattlecards",
    /** 查询玩家权益卡数据*/
    ["player.protocol.getplayerbenefitcards"]: "player.protocol.getplayerbenefitcards",
    /** 完成任务*/
    ["player.protocol.completetask"]: "player.protocol.completetask",
    /** 道具生产*/
    ["player.protocol.itemproduction"]: "player.protocol.itemproduction",
    /** 道具生产完成*/
    ["player.protocol.itemproductionfinish"]: "player.protocol.itemproductionfinish",
    /** 道具合成*/
    ["player.protocol.itemsynthesize"]: "player.protocol.itemsynthesize",
    /** 玩家道具流水查询*/
    ["player.protocol.getitemrecords"]: "player.protocol.getitemrecords",
    /** 查询邮件列表*/
    ["mail.protocol.getmails"]: "mail.protocol.getmails",
    /** 邮件标记已读*/
    ["mail.protocol.readmail"]: "mail.protocol.readmail",
    /** 邮件删除（批量）*/
    ["mail.protocol.deletemails"]: "mail.protocol.deletemails",
    /** 邮件领取附件（单个）*/
    ["mail.protocol.claimmailattachment"]: "mail.protocol.claimmailattachment",
    /** 邮件领取附件（批量）*/
    ["mail.protocol.claimmailsattachment"]: "mail.protocol.claimmailsattachment",
    /** 开盒子*/
    ["logic.protocol.itemboxopen"]: "logic.protocol.itemboxopen",
    /** 发送赠送邮件（道具）*/
    ["logic.protocol.sendgivemail"]: "logic.protocol.sendgivemail",
    /** 卡牌升级（品质）*/
    ["logic.protocol.battlecardupgrade"]: "logic.protocol.battlecardupgrade",
    /** 卡组新增*/
    ["logic.protocol.adddeck"]: "logic.protocol.adddeck",
    /** 查询卡组*/
    ["logic.protocol.getplayerdecks"]: "logic.protocol.getplayerdecks",
    /** 查询卡组卡牌数据*/
    ["logic.protocol.getdeckcards"]: "logic.protocol.getdeckcards",
    /** 设置卡组卡牌（可同时设置卡组属性）*/
    ["logic.protocol.setdeckcards"]: "logic.protocol.setdeckcards",
    /** 卡组修改（属性）*/
    ["logic.protocol.setdeckattrs"]: "logic.protocol.setdeckattrs",
    /** 设置默认卡组*/
    ["logic.protocol.setdeckdefault"]: "logic.protocol.setdeckdefault",
    /** 删除卡组*/
    ["logic.protocol.deletedeck"]: "logic.protocol.deletedeck",
    /** 启程宝匣奖励查询*/
    ["logic.protocol.getprocessboxrewards"]: "logic.protocol.getprocessboxrewards",
    /** 启程宝匣开启*/
    ["logic.protocol.processboxopen"]: "logic.protocol.processboxopen",
    /** 玩家等级奖励领取*/
    ["logic.protocol.playerlevelrewardclaim"]: "logic.protocol.playerlevelrewardclaim",
    /** 玩家等级奖励查询*/
    ["logic.protocol.getplayerlevelrewards"]: "logic.protocol.getplayerlevelrewards",
    /** 手动刷新每日任务*/
    ["logic.protocol.refreshdailytask"]: "logic.protocol.refreshdailytask",
    /** 获取手动已刷新每日任务次数*/
    ["logic.protocol.getrefreshdailytasktimes"]: "logic.protocol.getrefreshdailytasktimes",
    /** 查询头像列表*/
    ["logic.protocol.getavatarinfos"]: "logic.protocol.getavatarinfos",
    /** 设置头像信息*/
    ["logic.protocol.setavatarinfos"]: "logic.protocol.setavatarinfos",
    /** 查询卡背列表*/
    ["logic.protocol.getcardbackinfos"]: "logic.protocol.getcardbackinfos",
    /** 设置卡背信息*/
    ["logic.protocol.setcardbackinfos"]: "logic.protocol.setcardbackinfos",
    /** 领取初始卡组*/
    ["logic.protocol.noobcardsclaim"]: "logic.protocol.noobcardsclaim",
    /** 商城购买道具*/
    ["shop.protocol.buyitem"]: "shop.protocol.buyitem",
    /** 商城幸运抽奖*/
    ["shop.protocol.dolucky"]: "shop.protocol.dolucky",
    /** 商城查询索引*/
    ["shop.protocol.getindex"]: "shop.protocol.getindex",
    /** 交易行查询挂单（道具）*/
    ["market.protocol.getmakeritemorders"]: "market.protocol.getmakeritemorders",
    /** 交易行搜索订单（道具）*/
    ["market.protocol.searchitemorders"]: "market.protocol.searchitemorders",
    /** 交易行上架订单（道具）*/
    ["market.protocol.makeitemorder"]: "market.protocol.makeitemorder",
    /** 交易行成交订单（道具）*/
    ["market.protocol.takeitemorder"]: "market.protocol.takeitemorder",
    /** 交易行取消订单（道具）*/
    ["market.protocol.cancelitemorder"]: "market.protocol.cancelitemorder",
    /** 交易行查询挂单吃单（卡牌）*/
    ["market.protocol.getcardorders"]: "market.protocol.getcardorders",
    /** 交易行搜索订单（卡牌）*/
    ["market.protocol.searchcardorders"]: "market.protocol.searchcardorders",
    /** 交易行上架求购订单（卡牌）*/
    ["market.protocol.makecardbuyorder"]: "market.protocol.makecardbuyorder",
    /** 交易行上架出售订单（卡牌）*/
    ["market.protocol.makecardsellorder"]: "market.protocol.makecardsellorder",
    /** 交易行成交订单（卡牌）*/
    ["market.protocol.takecardorder"]: "market.protocol.takecardorder",
    /** 交易行取消订单（卡牌）*/
    ["market.protocol.cancelcardorder"]: "market.protocol.cancelcardorder",
    /** 匹配发起*/
    ["match.protocol.matchmaking"]: "match.protocol.matchmaking",
    /** 匹配取消*/
    ["match.protocol.matchcancel"]: "match.protocol.matchcancel",
    /** 查询排位赛战斗记录（最近20场）*/
    ["pvp.protocol.getpvprankbattlerecords"]: "pvp.protocol.getpvprankbattlerecords",
    /** 查询星元对战战斗记录（最近20场）*/
    ["pvp.protocol.getpvpstarbattlerecords"]: "pvp.protocol.getpvpstarbattlerecords",
    /** 查询排位赛排行榜*/
    ["pvp.protocol.getpvpranking"]: "pvp.protocol.getpvpranking",
    /** 查询排位信息*/
    ["pvp.protocol.getpvprankinfo"]: "pvp.protocol.getpvprankinfo",
    /** 查询排位等级奖励记录*/
    ["pvp.protocol.getranklevelreward"]: "pvp.protocol.getranklevelreward",
    /** 领取排位等级奖励*/
    ["pvp.protocol.ranklevelrewardclaim"]: "pvp.protocol.ranklevelrewardclaim",
    /** 创建用户自定义房间*/
    ["battle_mgr.protocol.createbattlemgruserroom"]: "battle_mgr.protocol.createbattlemgruserroom",
    /** 获取回放信息*/
    ["battle_mgr.protocol.getbattlereplayroom"]: "battle_mgr.protocol.getbattlereplayroom",
    /** 获取玩家最近战斗记录*/
    ["battle_mgr.protocol.getbattlerecentrecords"]: "battle_mgr.protocol.getbattlerecentrecords",
    /** 创建回放房间*/
    ["battle_mgr.protocol.createbattlereplayroom"]: "battle_mgr.protocol.createbattlereplayroom",
    /** 尝试退出之前任何房间以解除状态锁定*/
    ["battle_mgr.protocol.leaveallbattleroom"]: "battle_mgr.protocol.leaveallbattleroom",
    /** 获取最后有效的房间摘要*/
    ["battle_mgr.protocol.getlastbattleroomsummary"]: "battle_mgr.protocol.getlastbattleroomsummary",
    /** 房间保活*/
    ["battle.protocol.battleroomping"]: "battle.protocol.battleroomping",
    /** 加入房间*/
    ["battle.protocol.battleroomenter"]: "battle.protocol.battleroomenter",
    /** 离开房间*/
    ["battle.protocol.battleroomleave"]: "battle.protocol.battleroomleave",
    /** 加倍*/
    ["battle.protocol.battleroomdouble"]: "battle.protocol.battleroomdouble",
    /** 战斗房间确认操作输入*/
    ["battle.protocol.battleroomconfirmopinput"]: "battle.protocol.battleroomconfirmopinput",
    /** 战斗房间取消操作输入*/
    ["battle.protocol.battleroomcancelopinput"]: "battle.protocol.battleroomcancelopinput",
    /** 战斗房间客户端表演结束*/
    ["battle.protocol.battleroomroundshowend"]: "battle.protocol.battleroomroundshowend",
    /** 客户端通知服务器结算播报完成*/
    ["battle.protocol.battleroomsettlementend"]: "battle.protocol.battleroomsettlementend",
    /** 客户端通知服务器重传当前回合数据*/
    ["battle.protocol.battleroomroundretransmission"]: "battle.protocol.battleroomroundretransmission",
    /** 用户信息变更推送*/
    ["UserInfoChangePush"]: "UserInfoChangePush",
    /** 登录玩家数据推送*/
    ["PlayerLoginPush"]: "PlayerLoginPush",
    /** 道具数量变更推送*/
    ["PlayerItemsChangedPush"]: "PlayerItemsChangedPush",
    /** 任务变更推送*/
    ["PlayerTasksChangedPush"]: "PlayerTasksChangedPush",
    /** 玩家卡牌变更推送*/
    ["PlayerBattleCardChangePush"]: "PlayerBattleCardChangePush",
    /** 玩家收藏经验变更推送*/
    ["PlayerLevelExpChangedPush"]: "PlayerLevelExpChangedPush",
    /** 权益信息推送*/
    ["PlayerBenefitInfoPush"]: "PlayerBenefitInfoPush",
    /** 有新邮件提醒推送*/
    ["NewMailPush"]: "NewMailPush",
    /** 玩家风控等级推送*/
    ["RiskLevelPush"]: "RiskLevelPush",
    /** 跑马灯消息推送*/
    ["MarqueeMsgsPush"]: "MarqueeMsgsPush",
    /** 交易行挂单（道具）消息推送*/
    ["MarketItemOrderMakePush"]: "MarketItemOrderMakePush",
    /** 交易行吃单（道具）消息推送*/
    ["MarketItemOrderTakePush"]: "MarketItemOrderTakePush",
    /** 交易行取消挂单（道具）消息推送*/
    ["MarketItemOrderCancelledPush"]: "MarketItemOrderCancelledPush",
    /** 交易行挂单（卡牌）消息推送*/
    ["MarketCardOrderMakePush"]: "MarketCardOrderMakePush",
    /** 交易行吃单（卡牌）消息推送*/
    ["MarketCardOrderTakePush"]: "MarketCardOrderTakePush",
    /** 交易行取消挂单（卡牌）消息推送*/
    ["MarketCardOrderCancelledPush"]: "MarketCardOrderCancelledPush",
    /** 玩家默认卡组消息推送*/
    ["PlayerDefaultDeckPush"]: "PlayerDefaultDeckPush",
    /** 玩家每日任务刷新次数变更消息推送*/
    ["PlayerDailyTaskRefreshTimesChangePush"]: "PlayerDailyTaskRefreshTimesChangePush",
    /** 玩家新头像取得消息推送*/
    ["PlayerNewAvatarPush"]: "PlayerNewAvatarPush",
    /** 玩家新卡背取得消息推送*/
    ["PlayerNewCardBackPush"]: "PlayerNewCardBackPush",
    /** 匹配结果消息推送*/
    ["MatchMakingPush"]: "MatchMakingPush",
    /** 玩家登录时PVP消息推送*/
    ["PlayerPvpInfoPush"]: "PlayerPvpInfoPush",
    /** 玩家登录时PVP星元对战消息推送*/
    ["PlayerPvpStarInfoPush"]: "PlayerPvpStarInfoPush",
    /** PVP排位赛战斗结算消息推送*/
    ["PlayerPvpRankBattleSettlePush"]: "PlayerPvpRankBattleSettlePush",
    /** PVP星元对战战斗结算消息推送*/
    ["PlayerPvpStarBattleSettlePush"]: "PlayerPvpStarBattleSettlePush",
    /** PVP排位赛季切换消息推送*/
    ["PvpRankSeasonChangedPush"]: "PvpRankSeasonChangedPush",
    /** PVP星元对战赛季切换消息推送*/
    ["PvpStarSeasonChangedPush"]: "PvpStarSeasonChangedPush",
    /** 战斗房间操作输出推送*/
    ["BattleRoomOpOutputPush"]: "BattleRoomOpOutputPush",
    /** 战斗房间确认状态推送*/
    ["BattleRoomConfirmOpInputPush"]: "BattleRoomConfirmOpInputPush",
    /** 房间内推送玩家非游戏信息*/
    ["BattleRoomPlayersPush"]: "BattleRoomPlayersPush",
    /** 房间内推送玩家发送的表情*/
    ["BattleRoomExpressionPush"]: "BattleRoomExpressionPush",
    /** 推送自己加入房间*/
    ["BattleRoomEnterPush"]: "BattleRoomEnterPush",
    /** 推送自己离开房间*/
    ["BattleRoomLeavePush"]: "BattleRoomLeavePush",
}

export const Req = {
    /** 搜索用户信息*/
    ["user.protocol.searchuser"]: proto.pb.SearchUserReq,
    /** 修改昵称*/
    ["user.protocol.modifynickname"]: proto.pb.UserModifyNicknameReq,
    /** 绑定好友*/
    ["user.protocol.bindfriend"]: proto.pb.UserBindFriendReq,
    /** 查询好友列表（测试用，详细信息）*/
    ["user.protocol.getfriends"]: proto.pb.GetFriendsReq,
    /** 查询好友列表（正式用，缓存性能高）*/
    ["user.protocol.getfriendsinfos"]: proto.pb.GetFriendsInfosReq,
    /** 设置密码（游戏二级密码）*/
    ["user.protocol.passwordset"]: proto.pb.UserPasswordSetReq,
    /** 验证密码（游戏二级密码）*/
    ["user.protocol.passwordvalidate"]: proto.pb.UserPasswordValidReq,
    /** 查询玩家数据（这个后面要删除）*/
    ["player.protocol.getplayerdata"]: proto.pb.GetPlayerDataReq,
    /** 查询玩家道具数据*/
    ["player.protocol.getplayeritems"]: proto.pb.GetPlayerDataReq,
    /** 查询玩家任务数据*/
    ["player.protocol.getplayertasks"]: proto.pb.GetPlayerDataReq,
    /** 查询玩家卡牌数据*/
    ["player.protocol.getplayerbattlecards"]: proto.pb.GetPlayerDataReq,
    /** 查询玩家权益卡数据*/
    ["player.protocol.getplayerbenefitcards"]: proto.pb.GetPlayerDataReq,
    /** 完成任务*/
    ["player.protocol.completetask"]: proto.pb.CompleteTaskReq,
    /** 道具生产*/
    ["player.protocol.itemproduction"]: proto.pb.PlayerItemProductionReq,
    /** 道具生产完成*/
    ["player.protocol.itemproductionfinish"]: proto.pb.PlayerItemProductionFinishReq,
    /** 道具合成*/
    ["player.protocol.itemsynthesize"]: proto.pb.PlayerItemSynthesizeReq,
    /** 玩家道具流水查询*/
    ["player.protocol.getitemrecords"]: proto.pb.GetPlayerItemRecordsReq,
    /** 查询邮件列表*/
    ["mail.protocol.getmails"]: proto.pb.GetMailsReq,
    /** 邮件标记已读*/
    ["mail.protocol.readmail"]: proto.pb.ReadMailReq,
    /** 邮件删除（批量）*/
    ["mail.protocol.deletemails"]: proto.pb.DeleteMailsReq,
    /** 邮件领取附件（单个）*/
    ["mail.protocol.claimmailattachment"]: proto.pb.ClaimMailAttachmentReq,
    /** 邮件领取附件（批量）*/
    ["mail.protocol.claimmailsattachment"]: proto.pb.ClaimMailsAttachmentReq,
    /** 开盒子*/
    ["logic.protocol.itemboxopen"]: proto.pb.PlayerOpenBoxReq,
    /** 发送赠送邮件（道具）*/
    ["logic.protocol.sendgivemail"]: proto.pb.SendGiveMailReq,
    /** 卡牌升级（品质）*/
    ["logic.protocol.battlecardupgrade"]: proto.pb.BattleCardUpgradeReq,
    /** 卡组新增*/
    ["logic.protocol.adddeck"]: proto.pb.SetDeckAttrsReq,
    /** 查询卡组卡牌数据*/
    ["logic.protocol.getdeckcards"]: proto.pb.GetDeckCardsReq,
    /** 设置卡组卡牌（可同时设置卡组属性）*/
    ["logic.protocol.setdeckcards"]: proto.pb.SetDeckCardsReq,
    /** 卡组修改（属性）*/
    ["logic.protocol.setdeckattrs"]: proto.pb.SetDeckAttrsReq,
    /** 设置默认卡组*/
    ["logic.protocol.setdeckdefault"]: proto.pb.SetDeckDefaultReq,
    /** 删除卡组*/
    ["logic.protocol.deletedeck"]: proto.pb.DelDeckReq,
    /** 启程宝匣开启*/
    ["logic.protocol.processboxopen"]: proto.pb.ProcessBoxOpenReq,
    /** 玩家等级奖励领取*/
    ["logic.protocol.playerlevelrewardclaim"]: proto.pb.PlayerLevelRewardClaimReq,
    /** 设置头像信息*/
    ["logic.protocol.setavatarinfos"]: proto.pb.PlayerSetAvatarInfosReq,
    /** 设置卡背信息*/
    ["logic.protocol.setcardbackinfos"]: proto.pb.PlayerSetCardBackInfosReq,
    /** 商城购买道具*/
    ["shop.protocol.buyitem"]: proto.pb.ShopBuyItemReq,
    /** 商城幸运抽奖*/
    ["shop.protocol.dolucky"]: proto.pb.ShopDoLuckyReq,
    /** 商城查询索引*/
    ["shop.protocol.getindex"]: proto.pb.ShopGetIndexReq,
    /** 交易行查询挂单（道具）*/
    ["market.protocol.getmakeritemorders"]: proto.pb.GetMakerItemOrdersReq,
    /** 交易行搜索订单（道具）*/
    ["market.protocol.searchitemorders"]: proto.pb.SearchMarketItemOrdersReq,
    /** 交易行上架订单（道具）*/
    ["market.protocol.makeitemorder"]: proto.pb.MakeItemOrderReq,
    /** 交易行成交订单（道具）*/
    ["market.protocol.takeitemorder"]: proto.pb.TakeItemOrderReq,
    /** 交易行取消订单（道具）*/
    ["market.protocol.cancelitemorder"]: proto.pb.CancelItemOrderReq,
    /** 交易行查询挂单吃单（卡牌）*/
    ["market.protocol.getcardorders"]: proto.pb.GetCardOrdersReq,
    /** 交易行搜索订单（卡牌）*/
    ["market.protocol.searchcardorders"]: proto.pb.SearchMarketCardOrdersReq,
    /** 交易行上架求购订单（卡牌）*/
    ["market.protocol.makecardbuyorder"]: proto.pb.MakeCardBuyOrderReq,
    /** 交易行上架出售订单（卡牌）*/
    ["market.protocol.makecardsellorder"]: proto.pb.MakeCardSellOrderReq,
    /** 交易行成交订单（卡牌）*/
    ["market.protocol.takecardorder"]: proto.pb.TakeCardOrderReq,
    /** 交易行取消订单（卡牌）*/
    ["market.protocol.cancelcardorder"]: proto.pb.CancelCardOrderReq,
    /** 匹配发起*/
    ["match.protocol.matchmaking"]: proto.pb.MatchMakingReq,
    /** 查询排位赛战斗记录（最近20场）*/
    ["pvp.protocol.getpvprankbattlerecords"]: proto.pb.GetPvpRankBattleRecordsReq,
    /** 查询星元对战战斗记录（最近20场）*/
    ["pvp.protocol.getpvpstarbattlerecords"]: proto.pb.GetPvpStarBattleRecordsReq,
    /** 查询排位赛排行榜*/
    ["pvp.protocol.getpvpranking"]: proto.pb.GetPvpRankingReq,
    /** 查询排位信息*/
    ["pvp.protocol.getpvprankinfo"]: proto.pb.GetPvpRankInfoReq,
    /** 查询排位等级奖励记录*/
    ["pvp.protocol.getranklevelreward"]: proto.pb.GetPvpRankLevelRewardReq,
    /** 领取排位等级奖励*/
    ["pvp.protocol.ranklevelrewardclaim"]: proto.pb.PvpRankLevelRewardClaimReq,
    /** 创建用户自定义房间*/
    ["battle_mgr.protocol.createbattlemgruserroom"]: proto.pb.CreateBattleMgrUserRoomReq,
    /** 获取回放信息*/
    ["battle_mgr.protocol.getbattlereplayroom"]: proto.pb.GetBattleReplayRoomReq,
    /** 获取玩家最近战斗记录*/
    ["battle_mgr.protocol.getbattlerecentrecords"]: proto.pb.GetBattleRecentRecordsReq,
    /** 创建回放房间*/
    ["battle_mgr.protocol.createbattlereplayroom"]: proto.pb.CreateBattleReplayRoomReq,
    /** 尝试退出之前任何房间以解除状态锁定*/
    ["battle_mgr.protocol.leaveallbattleroom"]: proto.pb.LeaveAllBattleRoomReq,
    /** 获取最后有效的房间摘要*/
    ["battle_mgr.protocol.getlastbattleroomsummary"]: proto.pb.GetLastBattleRoomSummaryReq,
    /** 房间保活*/
    ["battle.protocol.battleroomping"]: proto.pb.BattleRoomPingReq,
    /** 加入房间*/
    ["battle.protocol.battleroomenter"]: proto.pb.BattleRoomEnterReq,
    /** 离开房间*/
    ["battle.protocol.battleroomleave"]: proto.pb.BattleRoomLeaveReq,
    /** 加倍*/
    ["battle.protocol.battleroomdouble"]: proto.pb.BattleRoomDoubleReq,
    /** 战斗房间确认操作输入*/
    ["battle.protocol.battleroomconfirmopinput"]: proto.pb.BattleRoomConfirmOpInputReq,
    /** 战斗房间取消操作输入*/
    ["battle.protocol.battleroomcancelopinput"]: proto.pb.BattleRoomCancelOpInputReq,
    /** 战斗房间客户端表演结束*/
    ["battle.protocol.battleroomroundshowend"]: proto.pb.BattleRoomRoundShowEndReq,
    /** 客户端通知服务器结算播报完成*/
    ["battle.protocol.battleroomsettlementend"]: proto.pb.BattleRoomSettlementEndReq,
    /** 客户端通知服务器重传当前回合数据*/
    ["battle.protocol.battleroomroundretransmission"]: proto.pb.BattleRoomRoundRetransmissionReq,
}

export const Ret = {
    /** 查询服务器时间(网关服务当前时间戳)*/
    ["gate.protocol.servertime"]: proto.pb.ServerTimeRes,
    /** 查询用户信息*/
    ["user.protocol.getuserinfo"]: proto.pb.GetUserInfoRes,
    /** 搜索用户信息*/
    ["user.protocol.searchuser"]: proto.pb.SearchUserRes,
    /** 修改昵称*/
    ["user.protocol.modifynickname"]: proto.pb.UserModifyNicknameRes,
    /** 绑定好友*/
    ["user.protocol.bindfriend"]: proto.pb.UserBindFriendRes,
    /** 查询好友列表（测试用，详细信息）*/
    ["user.protocol.getfriends"]: proto.pb.GetFriendsRes,
    /** 查询好友列表（正式用，缓存性能高）*/
    ["user.protocol.getfriendsinfos"]: proto.pb.GetFriendsInfosRes,
    /** 设置密码（游戏二级密码）*/
    ["user.protocol.passwordset"]: proto.pb.UserPasswordSetRes,
    /** 验证密码（游戏二级密码）*/
    ["user.protocol.passwordvalidate"]: proto.pb.UserPasswordValidRes,
    /** 查询玩家数据（这个后面要删除）*/
    ["player.protocol.getplayerdata"]: proto.pb.GetPlayerDataRes,
    /** 查询玩家道具数据*/
    ["player.protocol.getplayeritems"]: proto.pb.GetPlayerItemsRes,
    /** 查询玩家任务数据*/
    ["player.protocol.getplayertasks"]: proto.pb.GetPlayerTasksRes,
    /** 查询玩家卡牌数据*/
    ["player.protocol.getplayerbattlecards"]: proto.pb.GetPlayerBattleCardsRes,
    /** 查询玩家权益卡数据*/
    ["player.protocol.getplayerbenefitcards"]: proto.pb.GetPlayerBenefitCardsRes,
    /** 完成任务*/
    ["player.protocol.completetask"]: proto.pb.CompleteTaskRes,
    /** 道具生产*/
    ["player.protocol.itemproduction"]: proto.pb.PlayerItemProductionRes,
    /** 道具生产完成*/
    ["player.protocol.itemproductionfinish"]: proto.pb.PlayerItemProductionFinishRes,
    /** 道具合成*/
    ["player.protocol.itemsynthesize"]: proto.pb.PlayerItemSynthesizeRes,
    /** 玩家道具流水查询*/
    ["player.protocol.getitemrecords"]: proto.pb.GetPlayerItemRecordsRes,
    /** 查询邮件列表*/
    ["mail.protocol.getmails"]: proto.pb.GetMailsRes,
    /** 邮件标记已读*/
    ["mail.protocol.readmail"]: proto.pb.ReadMailRes,
    /** 邮件删除（批量）*/
    ["mail.protocol.deletemails"]: proto.pb.DeleteMailRes,
    /** 邮件领取附件（单个）*/
    ["mail.protocol.claimmailattachment"]: proto.pb.ClaimMailAttachmentRes,
    /** 邮件领取附件（批量）*/
    ["mail.protocol.claimmailsattachment"]: proto.pb.ClaimMailsAttachmentRes,
    /** 开盒子*/
    ["logic.protocol.itemboxopen"]: proto.pb.PlayerOpenBoxRes,
    /** 发送赠送邮件（道具）*/
    ["logic.protocol.sendgivemail"]: proto.pb.SendGiveMailRes,
    /** 卡牌升级（品质）*/
    ["logic.protocol.battlecardupgrade"]: proto.pb.BattleCardUpgradeRes,
    /** 卡组新增*/
    ["logic.protocol.adddeck"]: proto.pb.SetDeckAttrsRes,
    /** 查询卡组*/
    ["logic.protocol.getplayerdecks"]: proto.pb.GetPlayerDecksRes,
    /** 查询卡组卡牌数据*/
    ["logic.protocol.getdeckcards"]: proto.pb.GetDeckCardsRes,
    /** 设置卡组卡牌（可同时设置卡组属性）*/
    ["logic.protocol.setdeckcards"]: proto.pb.SetDeckCardsRes,
    /** 卡组修改（属性）*/
    ["logic.protocol.setdeckattrs"]: proto.pb.SetDeckAttrsRes,
    /** 设置默认卡组*/
    ["logic.protocol.setdeckdefault"]: proto.pb.SetDeckDefaultRes,
    /** 删除卡组*/
    ["logic.protocol.deletedeck"]: proto.pb.DelDeckRes,
    /** 启程宝匣奖励查询*/
    ["logic.protocol.getprocessboxrewards"]: proto.pb.GetProcessBoxRewardsRes,
    /** 启程宝匣开启*/
    ["logic.protocol.processboxopen"]: proto.pb.ProcessBoxOpenRes,
    /** 玩家等级奖励领取*/
    ["logic.protocol.playerlevelrewardclaim"]: proto.pb.PlayerLevelRewardClaimRes,
    /** 玩家等级奖励查询*/
    ["logic.protocol.getplayerlevelrewards"]: proto.pb.GetPlayerLevelRewardsRes,
    /** 手动刷新每日任务*/
    ["logic.protocol.refreshdailytask"]: proto.pb.RefreshDailyTaskRes,
    /** 获取手动已刷新每日任务次数*/
    ["logic.protocol.getrefreshdailytasktimes"]: proto.pb.GetRefreshDailyTaskTimesRes,
    /** 查询头像列表*/
    ["logic.protocol.getavatarinfos"]: proto.pb.PlayerGetAvatarInfosRes,
    /** 设置头像信息*/
    ["logic.protocol.setavatarinfos"]: proto.pb.PlayerSetAvatarInfosRes,
    /** 查询卡背列表*/
    ["logic.protocol.getcardbackinfos"]: proto.pb.PlayerGetCardBackInfosRes,
    /** 设置卡背信息*/
    ["logic.protocol.setcardbackinfos"]: proto.pb.PlayerSetCardBackInfosRes,
    /** 领取初始卡组*/
    ["logic.protocol.noobcardsclaim"]: proto.pb.PlayerNoobCardsClaimRes,
    /** 商城购买道具*/
    ["shop.protocol.buyitem"]: proto.pb.ShopBuyItemRes,
    /** 商城幸运抽奖*/
    ["shop.protocol.dolucky"]: proto.pb.ShopDoLuckyRes,
    /** 商城查询索引*/
    ["shop.protocol.getindex"]: proto.pb.ShopGetIndexRes,
    /** 交易行查询挂单（道具）*/
    ["market.protocol.getmakeritemorders"]: proto.pb.GetMakerItemOrdersRes,
    /** 交易行搜索订单（道具）*/
    ["market.protocol.searchitemorders"]: proto.pb.SearchMarketItemOrdersRes,
    /** 交易行上架订单（道具）*/
    ["market.protocol.makeitemorder"]: proto.pb.MakeItemOrderRes,
    /** 交易行成交订单（道具）*/
    ["market.protocol.takeitemorder"]: proto.pb.TakeItemOrderRes,
    /** 交易行取消订单（道具）*/
    ["market.protocol.cancelitemorder"]: proto.pb.CancelItemOrderRes,
    /** 交易行查询挂单吃单（卡牌）*/
    ["market.protocol.getcardorders"]: proto.pb.GetCardOrdersRes,
    /** 交易行搜索订单（卡牌）*/
    ["market.protocol.searchcardorders"]: proto.pb.SearchMarketCardOrdersRes,
    /** 交易行上架求购订单（卡牌）*/
    ["market.protocol.makecardbuyorder"]: proto.pb.MakeCardOrderRes,
    /** 交易行上架出售订单（卡牌）*/
    ["market.protocol.makecardsellorder"]: proto.pb.MakeCardOrderRes,
    /** 交易行成交订单（卡牌）*/
    ["market.protocol.takecardorder"]: proto.pb.TakeCardOrderRes,
    /** 交易行取消订单（卡牌）*/
    ["market.protocol.cancelcardorder"]: proto.pb.CancelCardOrderRes,
    /** 匹配发起*/
    ["match.protocol.matchmaking"]: proto.pb.MatchMakingRes,
    /** 匹配取消*/
    ["match.protocol.matchcancel"]: proto.pb.MatchCancelRes,
    /** 查询排位赛战斗记录（最近20场）*/
    ["pvp.protocol.getpvprankbattlerecords"]: proto.pb.GetPvpRankBattleRecordsRes,
    /** 查询星元对战战斗记录（最近20场）*/
    ["pvp.protocol.getpvpstarbattlerecords"]: proto.pb.GetPvpStarBattleRecordsRes,
    /** 查询排位赛排行榜*/
    ["pvp.protocol.getpvpranking"]: proto.pb.GetPvpRankingRes,
    /** 查询排位信息*/
    ["pvp.protocol.getpvprankinfo"]: proto.pb.GetPvpRankInfoRes,
    /** 查询排位等级奖励记录*/
    ["pvp.protocol.getranklevelreward"]: proto.pb.GetPvpRankLevelRewardRes,
    /** 领取排位等级奖励*/
    ["pvp.protocol.ranklevelrewardclaim"]: proto.pb.PvpRankLevelRewardClaimRes,
    /** 创建用户自定义房间*/
    ["battle_mgr.protocol.createbattlemgruserroom"]: proto.pb.CreateBattleMgrUserRoomRes,
    /** 获取回放信息*/
    ["battle_mgr.protocol.getbattlereplayroom"]: proto.pb.GetBattleReplayRoomRes,
    /** 获取玩家最近战斗记录*/
    ["battle_mgr.protocol.getbattlerecentrecords"]: proto.pb.GetBattleRecentRecordsRes,
    /** 创建回放房间*/
    ["battle_mgr.protocol.createbattlereplayroom"]: proto.pb.CreateBattleReplayRoomRes,
    /** 尝试退出之前任何房间以解除状态锁定*/
    ["battle_mgr.protocol.leaveallbattleroom"]: proto.pb.LeaveAllBattleRoomRes,
    /** 获取最后有效的房间摘要*/
    ["battle_mgr.protocol.getlastbattleroomsummary"]: proto.pb.GetLastBattleRoomSummaryRes,
    /** 房间保活*/
    ["battle.protocol.battleroomping"]: proto.pb.BattleRoomPingRes,
    /** 加入房间*/
    ["battle.protocol.battleroomenter"]: proto.pb.BattleRoomEnterRes,
    /** 离开房间*/
    ["battle.protocol.battleroomleave"]: proto.pb.BattleRoomLeaveRes,
    /** 加倍*/
    ["battle.protocol.battleroomdouble"]: proto.pb.BattleRoomDoubleRes,
    /** 战斗房间确认操作输入*/
    ["battle.protocol.battleroomconfirmopinput"]: proto.pb.BattleRoomConfirmOpInputRes,
    /** 战斗房间取消操作输入*/
    ["battle.protocol.battleroomcancelopinput"]: proto.pb.BattleRoomCancelOpInputRes,
    /** 战斗房间客户端表演结束*/
    ["battle.protocol.battleroomroundshowend"]: proto.pb.BattleRoomRoundShowEndRes,
    /** 客户端通知服务器结算播报完成*/
    ["battle.protocol.battleroomsettlementend"]: proto.pb.BattleRoomSettlementEndRes,
    /** 客户端通知服务器重传当前回合数据*/
    ["battle.protocol.battleroomroundretransmission"]: proto.pb.BattleRoomRoundRetransmissionRes,
    /** 用户信息变更推送*/
    ["UserInfoChangePush"]: proto.pb.UserInfoChangePush,
    /** 登录玩家数据推送*/
    ["PlayerLoginPush"]: proto.pb.PlayerLoginPush,
    /** 道具数量变更推送*/
    ["PlayerItemsChangedPush"]: proto.pb.PlayerItemsChangedPush,
    /** 任务变更推送*/
    ["PlayerTasksChangedPush"]: proto.pb.PlayerTasksChangedPush,
    /** 玩家卡牌变更推送*/
    ["PlayerBattleCardChangePush"]: proto.pb.PlayerBattleCardChangePush,
    /** 玩家收藏经验变更推送*/
    ["PlayerLevelExpChangedPush"]: proto.pb.PlayerLevelExpChangedPush,
    /** 权益信息推送*/
    ["PlayerBenefitInfoPush"]: proto.pb.PlayerBenefitInfoPush,
    /** 有新邮件提醒推送*/
    ["NewMailPush"]: proto.pb.NewMailPush,
    /** 玩家风控等级推送*/
    ["RiskLevelPush"]: proto.pb.RiskLevelPush,
    /** 跑马灯消息推送*/
    ["MarqueeMsgsPush"]: proto.pb.MarqueeMsgsPush,
    /** 交易行挂单（道具）消息推送*/
    ["MarketItemOrderMakePush"]: proto.pb.MarketItemOrderMakePush,
    /** 交易行吃单（道具）消息推送*/
    ["MarketItemOrderTakePush"]: proto.pb.MarketItemOrderTakePush,
    /** 交易行取消挂单（道具）消息推送*/
    ["MarketItemOrderCancelledPush"]: proto.pb.MarketItemOrderCancelledPush,
    /** 交易行挂单（卡牌）消息推送*/
    ["MarketCardOrderMakePush"]: proto.pb.MarketCardOrderMakePush,
    /** 交易行吃单（卡牌）消息推送*/
    ["MarketCardOrderTakePush"]: proto.pb.MarketCardOrderTakePush,
    /** 交易行取消挂单（卡牌）消息推送*/
    ["MarketCardOrderCancelledPush"]: proto.pb.MarketCardOrderCancelledPush,
    /** 玩家默认卡组消息推送*/
    ["PlayerDefaultDeckPush"]: proto.pb.PlayerDefaultDeckPush,
    /** 玩家每日任务刷新次数变更消息推送*/
    ["PlayerDailyTaskRefreshTimesChangePush"]: proto.pb.PlayerDailyTaskRefreshTimesChangePush,
    /** 玩家新头像取得消息推送*/
    ["PlayerNewAvatarPush"]: proto.pb.PlayerNewAvatarPush,
    /** 玩家新卡背取得消息推送*/
    ["PlayerNewCardBackPush"]: proto.pb.PlayerNewCardBackPush,
    /** 匹配结果消息推送*/
    ["MatchMakingPush"]: proto.pb.MatchMakingPush,
    /** 玩家登录时PVP消息推送*/
    ["PlayerPvpInfoPush"]: proto.pb.PlayerPvpInfoPush,
    /** 玩家登录时PVP星元对战消息推送*/
    ["PlayerPvpStarInfoPush"]: proto.pb.PlayerPvpStarInfoPush,
    /** PVP排位赛战斗结算消息推送*/
    ["PlayerPvpRankBattleSettlePush"]: proto.pb.PlayerPvpRankBattleSettlePush,
    /** PVP星元对战战斗结算消息推送*/
    ["PlayerPvpStarBattleSettlePush"]: proto.pb.PlayerPvpStarBattleSettlePush,
    /** PVP排位赛季切换消息推送*/
    ["PvpRankSeasonChangedPush"]: proto.pb.PvpRankSeasonChangedPush,
    /** PVP星元对战赛季切换消息推送*/
    ["PvpStarSeasonChangedPush"]: proto.pb.PvpStarSeasonChangedPush,
    /** 战斗房间操作输出推送*/
    ["BattleRoomOpOutputPush"]: proto.pb.BattleRoomOpOutputPush,
    /** 战斗房间确认状态推送*/
    ["BattleRoomConfirmOpInputPush"]: proto.pb.BattleRoomConfirmOpInputPush,
    /** 房间内推送玩家非游戏信息*/
    ["BattleRoomPlayersPush"]: proto.pb.BattleRoomPlayersPush,
    /** 房间内推送玩家发送的表情*/
    ["BattleRoomExpressionPush"]: proto.pb.BattleRoomExpressionPush,
    /** 推送自己加入房间*/
    ["BattleRoomEnterPush"]: proto.pb.BattleRoomEnterPush,
    /** 推送自己离开房间*/
    ["BattleRoomLeavePush"]: proto.pb.BattleRoomLeavePush,
}

export default proto;